# 3dsoftviz

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.user.2.5pre1  CMakeLists.txt.user.3d96a9c  CopyImg.bat  Doxyfile  Doxyfile.in  README.md  VS_create_project.bat  astyle.options  config.cmake.in  cpplint.bat  environment.txt  format.cmd  icon.psd  issues  run_astyle.bat  run_cppcheck.bat  run_cpplint.bat
_metrics/: lookup.lua  utils.lua
_metrics/captures/: AST.lua
_toUpload/luadb/: moduleExtractor.lua
_toUpload/metrics/: utils.lua
_toUpload/softviz/: ast_manager.lua  module_graph.lua
cmake/: Find3DMOUSE.cmake  FindAstyle.cmake  FindFGLOVE.cmake  FindFREENECT2.cmake  FindKINECTSDK.cmake  FindLEAP.cmake  FindMOUSE3D.cmake  FindNITE2.cmake  FindOPENNI2.cmake  FindPCL.cmake  FindSPEECHSDK.cmake  Findcppcheck.cmake  Findcpplint.cmake  SearchDependencies.cmake  SourceGroupFiles.cmake  Sources.cmake  astyle.cmake  cotire.cmake  cppcheck.cmake  cpplint.cmake  doxygen.cmake  sphinx.cmake
dependencies/: CMakeLists.txt
dependencies/Source/: CMakeLists.txt
dependencies/Source/igraph-0.5.2/: Makefile  Makefile.in  NEWS  config.h  config.h.in  config.status  configure  igraph.pc  igraph_Info.plist  libtool
dependencies/Source/igraph-0.5.2/debian/: Makefile  Makefile.in
dependencies/Source/igraph-0.5.2/doc/: Makefile  Makefile.in  igraph-docs.info
dependencies/Source/igraph-0.5.2/doc/book/: Makefile  Makefile.in
dependencies/Source/igraph-0.5.2/examples/simple/: igraph_es_pairs.c
dependencies/Source/igraph-0.5.2/interfaces/: Makefile  Makefile.in
dependencies/Source/igraph-0.5.2/interfaces/R/: DESCRIPTION  Makefile  Makefile.in  configure.in
dependencies/Source/igraph-0.5.2/interfaces/R/src/: Makevars.win
dependencies/Source/igraph-0.5.2/interfaces/shell/: Makefile  Makefile.in  interface.c
dependencies/Source/igraph-0.5.2/src/: Makefile  Makefile.in  foreign-gml-lexer.c  foreign-gml-parser.c  foreign-lgl-lexer.c  foreign-lgl-parser.c  foreign-ncol-lexer.c  foreign-ncol-parser.c  foreign-pajek-lexer.c  foreign-pajek-parser.c  foreign-pajek-parser.h  igraph.h  layout.c
dependencies/Source/igraph-0.5.2/tests/: Makefile  Makefile.in  atconfig  atlocal  package.m4  testsuite
dependencies/Source/libnoisesrc-1.0.0/: CMakeLists.txt
dependencies/Source/libnoisesrc-1.0.0/src/: basictypes.h
dependencies/Source/libpng-1.2.40/: CMakeLists.txt  dist.cmake  dist.info
dependencies/Source/zlib-1.2.3/: CMakeLists.txt  dist.info
dependencies/Windows/include/: DensityGrid.h  NetRoutines.h  attributes.h  dqueue.h  drl_parse.h  foreign-ncol-parser.h  foreign-pajek-parser.h  gengraph_definitions.h  gengraph_graph_molloy_hash.h  gengraph_graph_molloy_optimized.h  gengraph_hash.h  gengraph_header.h  gengraph_powerlaw.h  gengraph_qsort.h  gengraph_vertex_cover.h  gml_tree.h  heap.h  igraph.h  igraph_math.h  interrupt.h  matrix.h  memory.h  pottsmodel_2.h  random.h  walktrap_graph.h  walktrap_heap.h
dependencies/_Windows/include/: NetDataTypes.h  arpack.h  arpack_internal.h  array.h  atlas-edges.h  drl_Node.h  drl_graph.h  error.h  foreign-gml-parser.h  foreign-lgl-parser.h  gengraph_box_list.h  gengraph_degree_sequence.h  gengraph_random.h  igraph.h.orig  igraph_pmt.h  igraph_pmt_off.h  stack.h  types.h  vector.h  walktrap_communities.h
dependencies/fglove/include/: fglove.h
dependencies/fglove/lib/: fglove.lib  fglove64.lib
dependencies/leap-orion/include/: Leap.h  Leap.i
dependencies/leap-orion/lib/: Leap.lib
dependencies/leap/include/: Leap.h  LeapMath.h
dependencies/mouse3d/: fixx11.h  xdrvlib.c  xdrvlib.h
dependencies/noiseutils/: noiseutils.cpp
dependencies/qtcolorpicker/: qtcolorpicker.cpp  qtcolorpicker.h
dependencies/speech/include/: KinectAudioStream.h  SpeechSDK.h  resource.h  stdafx.h
dependencies/speech/lib/: SpeechSDK.exp  SpeechSDK.ilk  SpeechSDK.lib
doc/: instalation.md
docs/: 3dmouse.rst  Makefile  astyle.rst  codereview.rst  conf.py  conf.py.in  cpp-howto.rst  cppcheck.rst  cpplint.rst  data.rst  developers.rst  features-review.rst  git.rst  gitflow.rst  gitlua.rst  igloo.rst  index.rst  install_guide_changelog.rst  install_guide_errors.rst  install_guide_linux.rst  install_guide_macos.rst  install_guide_vc10.rst  install_guide_vc12.rst  install_guide_vc14.1.rst  install_guide_wsl.rst  layout.rst  leap.rst  log_benchmark_libs.xls  logbenchlib.rst  logging.rst  make.bat  methodology.rst  migracia-msvc2013.rst  network.rst  plantuml.rst  product-summary.rst  qosg.rst  sphinx.rst  test.rst  tfs.rst  (+6 more)
docs/uml/: 3dmouse_linux.wsd  3dmouse_win.wsd  AppCore.wsd  Architektura_3DSoftViz.txt  Architektura_3DSoftViz.wsd  ArucoModul.wsd  Class_Diagram.wsd  Clustering.wsd  Data.Edge.wsd  Data.Graph.wsd  Data.Node.wsd  Datovy_model_git.wsd  Graph.structure.layer0.wsd  Graph.structure.layer1.wsd  Graph.structure.layer2.wsd  Graph.structure.layer3.Edge.wsd  Graph.structure.layer3.Node.wsd  Importer.wsd  Kinect.wsd  Lua.wsd  (+35 more)
include/: CPPLINT.cfg  CPPLINT.sh  Headers.cmake  cpplint.bat
lib/: libpng.lib
resources/: 3DSOFTVIZ_app.icns  3DSOFTVIZ_pkg.icns  SpeechGrammarFile.grxml  avatar.osg  circle.graphml  enslyon.graphml  graph_n100_e150.graphml  graph_n60_e80.graphml  mike - Copy.xml  mike.graphml  mike2.graphml  nested3.graphml  nested4.graphml  planar_n20_e20.graphml  planar_n50_e70.graphml  root_n20_e20.graphml  tree.graphml~  tree100.graphml  tree1000.graphml  tree2_1000.graphml  tree500.graphml
src/: CMakeLists.txt  CPPLINT.cfg  CPPLINT.sh  cpplint.bat  main.cpp
tests/: CMakeLists.txt  all_tests.cpp
tests/Repository/Git/GitLib/: test_GitEvolutionGraph.cpp  test_GitEvolutionGraphManager.cpp  test_GitFile.cpp  test_GitFileDiffBlock.cpp  test_GitFileDiffBlockLine.cpp  test_GitFileLoader.cpp  test_GitFunction.cpp  test_GitMetaData.cpp  test_GitMetrics.cpp  test_GitVersion.cpp  test_gitlib.cpp
tmp/: dump_db_schema_30.11.2009.sql  tp_db_initialization.sql  tp_db_kapec.sql  tp_db_paprcka.sql  tp_db_paulovic.sql  tp_db_paulovic_new.sql  tp_db_pavlik.sql  tp_db_pazitnaj.sql  tp_db_perdik.sql
vagrant/: Vagrantfile  playbook.yml
(+848 files in other folders)
